[tool.poetry]
name = "drmbypass"
version = "0.1.0"
description = ""
authors = ["Bogdan Martyshevskiy <vigoroous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.3.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
